<resources>
    <string name="app_name">Lab4</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="addButton">addButton</string>
    <string name="cardView">Viewing Card</string>
    <string name="picture_placeholder">Current picture or placeholder</string>
    <string name="questionField">Question: %1$s</string>
    <string name="exampleField">Hint: %1$s</string>
    <string name="answerField">Answer: %1$s</string>
    <string name="translationField">Translation: %1$s</string>
    <string name="editButton">editButton</string>
    <string name="backButton">backButton</string>
    <string name="CardAdd">Adding Card</string>
    <string name="enterTranslation">Enter Translation</string>
    <string name="enterAnswer">Enter Answer</string>
    <string name="enterExample">Enter Example</string>
    <string name="enterQuestion">Enter Question</string>
    <string name="CardEdit">Editing Card</string>
    <string name="saveButton">saveButton</string>
    <string name="cardList">List Cards</string>
    <string name="deleteWarning">Do you really wish to delete the card?</string>
    <string name="deletionMessage">Будет удалена карточка:\n %1$s / %2$s</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="unfilledQuestion">Поле вопроса отсутствует</string>
    <string name="unfilledExample">Поле примера отсутствует</string>
    <string name="unfilledAnswer">Поле ответа отсутствует</string>
    <string name="unfilledTranslation">Поле перевода отсутствует</string>
    <string name="deletionReverted">Удаление отменено</string>
</resources>