<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/openCardList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardList"
        android:onClick="openCardList"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/openCardAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CardAdd"
        android:onClick="openCardAdd"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/openCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardView"
        android:onClick="openCardView"/>

</LinearLayout>