<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ManageCardFragment">

    <ImageView
        android:id="@+id/cardImage"
        android:layout_width="@dimen/null_size"
        android:layout_height="@dimen/null_size"
        android:contentDescription="@string/currOrPlaceholder"
        android:src="@drawable/icon"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/enterQuestion"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:hint="@string/enterQuestion"
        android:inputType="text"
        android:textSize="@dimen/card"
        app:layout_constraintTop_toBottomOf="@id/cardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/cards_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin" />

    <EditText
        android:id="@+id/enterExample"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:hint="@string/enterExample"
        android:inputType="text"
        android:textSize="@dimen/card"
        app:layout_constraintTop_toBottomOf="@id/enterQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/cards_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin" />


    <EditText
        android:id="@+id/enterAnswer"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:hint="@string/enterAnswer"
        android:inputType="text"
        android:textSize="@dimen/card"
        app:layout_constraintTop_toBottomOf="@id/enterExample"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/cards_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin" />


    <EditText
        android:id="@+id/enterTranslation"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:hint="@string/enterTranslation"
        android:inputType="text"
        android:textSize="@dimen/card"
        app:layout_constraintTop_toBottomOf="@id/enterAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/cards_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/addButton"
        android:src="@drawable/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:tint="@android:color/white"
        app:backgroundTint="@color/bright_pink"/>

</androidx.constraintlayout.widget.ConstraintLayout>
