<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SeeCardFragment">

    <ImageView
        android:id="@+id/cardThumbnail"
        android:layout_width="@dimen/null_size"
        android:layout_height="@dimen/null_size"
        android:contentDescription="@string/currOrPlaceholder"
        android:src="@drawable/icon"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/cardQuestion"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:text="@string/questionField"
        android:textSize="@dimen/card"
        app:layout_constraintTop_toBottomOf="@id/cardThumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/cards_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin" />

    <TextView
        android:id="@+id/cardExample"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:text="@string/exampleField"
        android:textSize="@dimen/card"
        app:layout_constraintTop_toBottomOf="@id/cardQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/cards_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin" />

    <TextView
        android:id="@+id/cardAnswer"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:textSize="@dimen/card"
        android:text="@string/answerField"
        app:layout_constraintTop_toBottomOf="@id/cardExample"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/cards_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin" />

    <TextView
        android:id="@+id/cardTranslation"
        android:layout_width="@dimen/null_size"
        android:layout_height="wrap_content"
        android:textSize="@dimen/card"
        android:text="@string/translationField"
        app:layout_constraintTop_toBottomOf="@id/cardAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/cards_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:maxImageSize="@dimen/mid_mar"
        android:tint="@android:color/white"
        app:backgroundTint="@color/bright_pink"/>



</androidx.constraintlayout.widget.ConstraintLayout>
